Fix remove button stretching to full widget height
Add flex: none to the overlay so it doesn't inherit flex-grow from
the grid's nested flex propagation rules.

--- a/app/javascript/stylesheets/dashboards.scss
+++ b/app/javascript/stylesheets/dashboards.scss
@@ -94,6 +94,7 @@
   inset: 0;
   z-index: 10;
   display: flex;
+  flex: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
